--- a/index.html
+++ b/index.html
@@ -1,1 +1,59 @@
+<!DOCTYPE html>
+    <html>
 
+    <head>
+        <meta charset="utf-8">
+        <title></title>
+        <link rel="stylesheet" type="text/css" href="style.css">
+    </head>
+
+    <body>
+        <h1 class="Titel">Markdown warm up</h1>
+        <ul>
+            <li>Group exercice (2-3)</li>
+            <a href="https://guides.github.com/features/mastering-markdown/">learn markdown</a>
+        </ul>
+
+
+
+        <h2  class="ondertitel">Step 1 :</h2>
+        <ol class="link">
+            <li>One of the groupe creates a repository named : <mark>markdown-warmup</mark></li>
+            <li>Find a website that deserves improvements</li>
+            <li>Analyse it</li>
+            <li>Answer to the following questions with markdown within the README.md file</li>
+        </ol>
+
+        <ul class="link">
+            <li>Wich website did you find ? (name, url, link )</li>
+            <li>Is it updated frequently ?</li>
+            <li>How did you find it ?</li>
+            <li>Why this website needs updates or a remake ?</li>
+            <li> Is this website present on social networks ?</li>
+            <li>Make a list of recomandations of futur changes</li>
+            <li>By group, present your markdown and the website</li>
+        </ul>
+        <p>
+            <i>Use markdown as much as you can</i>
+        </p>
+
+
+        <h2 class="ondertitel">Step 2 :</h2>
+        <ul class="link">
+            <li>The ones that do not have the repository will *fork* it</li>
+            <li>Add the following modifications</li>
+            <ul class="link2">
+                <li>Add a recommandation of a futur change</li>
+                <li>Add a list of the group members</li>
+            </ul>
+            <li>Commit the changes</li>
+            <li>Send a <mark>pull pull request</mark> to the original one</li>
+            <li>By group see how the original accepts the <mark>pull-request</mark></li>
+            <li> Create an <mark>issue</mark> on the repository of the other groups members</li>
+            <li>All the group solve their own issues</li>
+        </ul>
+
+
+    </body>
+
+    </html>
